# blog_platform

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
blog/: admin.py  forms.py  models.py  services.py  tests.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_post_user_payment.py  0003_alter_post_options_alter_payment_amount.py
blog/templates/blog/: base.html  contacts.html  post_confirm_delete.html  post_detail.html  post_form.html  post_list.html  subscription.html  subscription_success.html
blog/templates/includes/: inc_main_menu.html
config/: gunicorn.py  settings.py  urls.py
nginx/: Dockerfile  nginx.conf
users/: forms.py  models.py  services.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  password_recovery.html  register.html  user_form.html  verify_phone.html  verify_phone_error.html
